tests/fixtures/syntax/valid/write_step_string_literal.repor
case "write step string literal" {
  write <"expected/stdout.txt"> "hello\nworld\n"
  $ true
  assert {
    exit 0
  }
}
