tests/fixtures/syntax/invalid/stdout_text_equals_workspace_path_literal.repor
case "stdout text_equals expected text requires a TextValue, not a workspace path literal" {
  $ true
  assert {
    stdout text_equals <"expected.txt">
  }
}
